<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>ebhc</groupId>
  <artifactId>pfbackup</artifactId>
  <version>1.0</version>
  <packaging>jar</packaging>

  <name>pfbackup</name>
  <url>http://maven.apache.org</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>3.8.1</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-math3</artifactId>
      <version>3.5</version>
    </dependency>

  </dependencies>

  <build>
    <plugins>

      <plugin>
      	<artifactId>maven-compiler-plugin</artifactId>
      	<version>2.3.2</version>
      	<configuration>
      	  <compilerVersion>1.9</compilerVersion>
      	  <source>1.9</source>
      	  <target>1.9</target>
      	</configuration>
      </plugin>

      <!-- `mvn package exec:java` will run your application in the
           same process that Maven is running in, which may or may not
           be acceptable. -->

      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>exec-maven-plugin</artifactId>
        <version>1.3.2</version>
        <configuration>
          <mainClass>${mainClass}</mainClass>
        </configuration>
      </plugin>

      <!-- If you want to run it in a different process, you can
           modify the plugin configuration section to something more
           like this: -->

      <!-- <plugin> -->
      <!--   <groupId>org.codehaus.mojo</groupId> -->
      <!--   <artifactId>exec-maven-plugin</artifactId> -->
      <!--   <version>1.3.2</version> -->
      <!--   <configuration> -->
      <!--     <executable>java</executable> -->
      <!--     <arguments> -->
      <!--       <argument>-Xms512m</argument> -->
      <!--       <argument>-Xmx512m</argument> -->
      <!--       <argument>-XX:NewRatio=3</argument> -->
      <!--       <argument>-XX:+PrintGCTimeStamps</argument> -->
      <!--       <argument>-XX:+PrintGCDetails</argument> -->
      <!--       <argument>-Xloggc:gc.log</argument> -->
      <!--       <argument>-classpath</argument> -->
      <!--       <classpath/> -->
      <!--       <argument>org.acme.Main</argument> -->
      <!--     </arguments> -->
      <!--   </configuration> -->
      <!-- </plugin> -->

      <!-- Then use the goal: -->

      <!-- mvn exec:exec -->
      <!-- This will execute the JVM in a new process and allow you to
           pass in whatever arguments you like.  Notice the empty
           classpath tag.  This will insert the correct runtime
           classpath for you based on the dependencies in the
           pom.xml. -->





    </plugins>
  </build>

</project>
